cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Create VPC, Subnet, EC2 Instance, Security Group, Internet Gateway, and Route Table'

Parameters:
  VpcCIDRBlock:
    Type: String
    Default: "10.10.0.0/16"
    Description: CIDR block for the VPC

  SubnetCIDRBlock:
    Type: String
    Default: "10.10.1.0/24"
    Description: CIDR block for the Subnet

  KeyPairName:
    Type: String
    Default: "classic"
    Description: Name of an existing EC2 KeyPair to enable SSH access to the EC2 instance

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDRBlock

  MySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: !Ref SubnetCIDRBlock
      MapPublicIpOnLaunch: true

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH, HTTP, and Custom port 8080 traffic
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: MySecurityGroup

  MyInternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  MyRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  RouteToInternetGateway:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  AssociateSubnetWithRouteTable:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MySubnet
      RouteTableId: !Ref MyRouteTable

  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0277155c3f0ab2930 # Replace with your desired AMI ID
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SubnetId: !Ref MySubnet
      SecurityGroupIds:
        - !Ref MySecurityGroup
      UserData: !Base64 |
        #!/bin/bash
        sudo -i 
        yum update all
        yum install httpd -y
        systemctl start httpd
        systemctl enable httpd
        echo "CFT created succesfully" > /var/www/html/index.html

Outputs:
  InstanceId:
    Description: The ID of the newly created EC2 instance
    Value: !Ref MyEC2Instance
    Export:
      Name: EC2InstanceId
